# stock-prediction-pipeline

./: Stock Prediction Pipeline.docx  model_evaluation_asset.py  pyproject.toml  trained_model_asset.py
.tmp_dagster_home_rtanod4_/history/: runs.db
.tmp_dagster_home_rtanod4_/history/runs/: 5593391e-9e94-44b6-a679-c2d328b6cef9.db  60334475-91c2-4f37-b0a8-2881545941b6.db  60379c6a-06bc-4b40-920e-052c02fe654c.db  7ae203d6-b362-45b1-9741-161f0f9fb9bc.db  93ed7386-d176-48c3-86c6-ce0430bc553d.db  index.db
.tmp_dagster_home_rtanod4_/schedules/: schedules.db
.tmp_dagster_home_rtanod4_/storage/: enhanced_multi_ticker_alert  feature_engineered_data  market_status  model_evaluation  multi_ticker_predictions  prediction_summary_report  raw_stock_data  trained_model
.tmp_dagster_home_rtanod4_/storage/5593391e-9e94-44b6-a679-c2d328b6cef9/compute_logs/: aakckahc.err  aakckahc.out  aulomazy.err  aulomazy.out  gtweetcq.err  isrdpcby.err  nyuuicyw.err  oosskcis.err  oosskcis.out  piuyloxj.err  tsjqjnjj.err  xozhmylb.err
.tmp_dagster_home_rtanod4_/storage/60334475-91c2-4f37-b0a8-2881545941b6/compute_logs/: cazghere.err  deqxkqst.err  dsoeetdk.err  fgnzyxqn.err  fssnxzrq.err  fssnxzrq.out  rlyhgtqu.err  skvoldwz.err  skvoldwz.out  xwcoptsx.err  zdjsksnm.err
.tmp_dagster_home_rtanod4_/storage/60379c6a-06bc-4b40-920e-052c02fe654c/compute_logs/: cmzyneqw.err  dpjgezzr.err  izhniqtg.err  mjkbpkie.err  mjkbpkie.out  nmsaumbw.err  nzmcwsvv.err  quzqdhde.err  teslpods.err  teslpods.out  (+2 more)
data/: most_frequent_words.json  topstories.csv  topstory_ids.json
stock_pipeline/: __init__.py
(+26 files in other folders)
